[workspace]
resolver = "2"
members = [
    "src/pg_tempest_core",
    "src/pg_tempest_pg_client",
    "src/pg_tempest_host",
    "src/pg_tempest_server",
]

[workspace.dependencies]
axum = { version = "0.8.7", features = ["tokio", "json", "macros"] }
config = { version = "0.15.19", features = ["toml"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
serde = { version = "1.0.228", features = ["derive", "std", "rc"] }
async-trait = { version = "0.1.89" }
extension-trait = { version = "1.0.2" }
chrono = { version = "0.4.42", features = ["serde"] }
sqlx = { version = "0.8.2", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.20", features = ["json"] }
derive_more = { version = "2.0.1", features = [
    "as_ref",
    "display",
    "deref",
    "debug",
    "into",
    "from_str",
] }
regex = { version = "1.12.2" }
testcontainers = { version = "0.25.2" }
testcontainers-modules = { version = "0.13.0", features = ["postgres"] }
hex = { version = "0.4.3" }
thiserror = { version = "2.0.17" }
anyhow = { version = "1.0.100" }
