[package]
name = "pg-tempest"
version = "0.2.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
pg_tempest_core = { path = "../pg_tempest_core" }
pg_tempest_server = { path = "../pg_tempest_server" }
config = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
derive_more = { workspace = true }
anyhow = { workspace = true }
