[package]
name = "pg-tempest"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
pg_tempest_core = { path = "../pg_tempest_core" }
pg_tempest_pg_client = { path = "../pg_tempest_pg_client" }
pg_tempest_server = { path = "../pg_tempest_server" }
config = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
derive_more = { workspace = true }
