[package]
name = "pg_tempest_pg_client"
version.workspace = true
edition.workspace = true

[dependencies]
pg_tempest_core = { path = "../pg_tempest_core" }
async-trait = { workspace = true }
sqlx = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
