[package]
name = "pg_tempest_server"
version = "0.2.0"
edition = "2024"

[dependencies]
pg_tempest_core = { path = "../pg_tempest_core" }
axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
