[package]
name = "pg_tempest_server"
version.workspace = true
edition.workspace = true

[dependencies]
pg_tempest_core = { path = "../pg_tempest_core" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
